Add solution for 2-lenght bitstrings

--- a/qosf_task_1.ipynb
+++ b/qosf_task_1.ipynb
@@ -25,7 +25,7 @@
     "from ibm_quantum_widgets import *\n",
     "from qiskit.providers.aer import QasmSimulator\n",
     "\n",
-    "# Loading your IBM Quantum account(s)\n",
+    "# Loading IBM Quantum account(s)\n",
     "provider = IBMQ.load_account()"
    ]
   },
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Functions\n",
+    "# Clasical Functions\n",
     "\n",
     "def check_binary(binary):\n",
     "    if len(binary) == 0 or len(binary) == 1:\n",
@@ -60,7 +60,17 @@
     "        i = binary[index]\n",
     "        if len(i) < max_len:\n",
     "            binary[index] = (max_len - len(i)) * \"0\" + i\n",
-    "    return binary\n",
+    "    return binary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6732cc8-eb29-4190-8471-8217512b16fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Quantum Functions\n",
     "\n",
     "def plot_qc(qc):\n",
     "    backend = Aer.get_backend('qasm_simulator')\n",
@@ -97,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 65,
    "id": "2bf1e10e-8f6a-4300-9e0b-46350765b2ba",
    "metadata": {},
    "outputs": [
@@ -113,6 +123,7 @@
    ],
    "source": [
     "# Classical\n",
+    "\n",
     "vector = [1, 5, 4, 2]\n",
     "binary = binarize(vector)\n",
     "solutions = []\n",
@@ -127,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 66,
    "id": "a3e82d85-c31e-4a2f-8069-8dbd58450d2a",
    "metadata": {},
    "outputs": [
@@ -161,9 +172,11 @@
     "q = range(n)\n",
     "bs_0 = binary_solutions[0]\n",
     "bs_1 = binary_solutions[1]\n",
-    "qc = qc = QuantumCircuit(qubits, qubits)\n",
+    "qc = QuantumCircuit(qubits, qubits)\n",
     "\n",
-    "if len(binary_solutions) == 2:\n",
+    "assert len(binary_solutions) == 2\n",
+    "\n",
+    "if len(bs_0) == 2:\n",
     "    if bs_0 == bs_1:\n",
     "        qc = state(qc, bs_0)\n",
     "    elif bs_0[0] == \"0\" == bs_1[0]:\n",
@@ -188,14 +201,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "eaae7ce9-1c0b-444c-a6e7-535ccd5ad7c3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "00a452a3-934c-4ae8-80a2-40533abc75df",
    "metadata": {},
    "outputs": [],
    "source": []
